# django-meilisearch

./: .gitignore  setup.cfg  setup.py
dj_meilisearch/: __init__.py  register.py
dj_meilisearch/management/commands/: search_sync.py
django_meilisearch/: __init__.py  client.py  register.py  utils.py
django_meilisearch/management/commands/: search_sync.py
search/: client.py  register.py
search/management/commands/: search_sync.py
