[metadata]
name = django-meilisearch
version = 0.1
description = A Django app to wrap your django model to a meilisearch index
long_description = file: README.rst
url = https://boertel.github.io/django-meilisearch
author = Benjamin Oertel
author_email = benjamin.oertel@gmail.com
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
install_requires =
    Django >= 2.0
    meilisearch >= 0.13.0
